--- a/2_map_and_list/atm.mustache
+++ b/2_map_and_list/atm.mustache
@@ -68,9 +68,11 @@
 	
 	{{#if isTransactionExecuting}}
 		<div class='warn'>
-			executing 
-			<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
-		</div>
+				<p>
+				<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
+				executing 
+				</p>
+  			</div>
 	{{else}}
 		<button can-click="currentTransaction.execute"
 			{{^isTransactionReady}}DISABLED{{/isTransactionReady}}>Deposit</button>
@@ -89,9 +91,11 @@
 	</p>
 	{{#if isTransactionExecuting}}
 		<div class='warn'>
-			executing 
-			<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
-		</div>
+				<p>
+				<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
+				executing 
+				</p>
+  			</div>
 	{{else}}
 		<button can-click="currentTransaction.execute"
 					{{^isTransactionReady}}DISABLED{{/isTransactionReady}}>Withdrawl</button>
@@ -129,10 +133,12 @@
 			<li can-click="chooseAccount">{{name}} - ${{balance}}</li>
 		{{/each}}
 	</ul>
-	<div class='warning'>
-		printing
-		<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
-	</div>
+	<div class='warn'>
+				<p>
+				<img src="http://bithub.com/assets/images/ajax-loader-sm-blue.gif"/> 
+				printing 
+				</p>
+  			</div>
 {{/isExiting}}
 
 		</div>
