--- a/2_map_and_list/styles.less
+++ b/2_map_and_list/styles.less
@@ -98,11 +98,16 @@ body {
 			background: -ms-linear-gradient(top,  rgba(125,126,125,0.5) 0%,rgba(14,14,14,0.5) 100%); /* IE10+ */
 			background: linear-gradient(to bottom,  rgba(125,126,125,0.5) 0%,rgba(14,14,14,0.5) 100%); /* W3C */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#807d7e7d', endColorstr='#800e0e0e',GradientType=0 ); /* IE6-9 */
-			span {
+			p {
 				text-align: center;
 				padding: 10px;
 				border: 3px solid #000;
 				background: #fff; 
+				display: block;
+				color: #000;
+				-webkit-border-radius: 5px;
+				-moz-border-radius: 5px;
+				border-radius: 5px;
 				
 				img {
 					display: block;
