Updating styles again

--- a/2_map_and_list/atm.mustache
+++ b/2_map_and_list/atm.mustache
@@ -98,7 +98,7 @@
   			</div>
 	{{else}}
 		<button can-click="currentTransaction.execute"
-					{{^isTransactionReady}}DISABLED{{/isTransactionReady}}>Withdrawl</button>
+					{{^isTransactionReady}}DISABLED{{/isTransactionReady}}>Withdraw</button>
 		<a href="javascript://" can-click="removeTransaction">cancel</a>
 	{{/if}}
 {{/isWithdrawalInfo}}
