added meetups logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,11 @@
 <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon' />
 </head>
 <body>
-<div id='bg'>
-</div>
 <div class='cf' id='wrapper'>
 	<div id='menu-wrapper'>
 		<div id='header'>
 			<div id='logo-and-download'>
-				<a href="http://canjs.us/" class="logo"></a>
+				<a href="http://canjs.us/" class="logo"></a><a href="http://www.meetup.com/find/?keywords=canjs" class="meetup-logo" ></a>
 			</div>
 		</div>
 		<div class='cf' id='buttons'>
