--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -86,6 +86,17 @@ em {
 	border-bottom: 0;
 	box-shadow: none;
 }
+#logo-and-download a.meetup-logo{
+	display: block;
+	position: absolute;
+	top: -20px;
+	width: 108px;
+	height: 100px;
+	background: transparent url(../images/meetup-logo.png) no-repeat scroll center;
+	text-decoration: none;
+	border-bottom: 0;
+	box-shadow: none;
+}
 #logo-and-download a {
 	position: absolute;
 	top: 21px;
