--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <title>{{ page.title }}</title>
+<meta charset="utf-8"> 
 <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
 <link rel="stylesheet" type="text/css" href="stylesheets/tango.css">
 <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon' />
