adding compute goodness

--- a/2_map_and_list/styles.less
+++ b/2_map_and_list/styles.less
@@ -17,6 +17,8 @@ body {
 		border-radius: 3px;
 		font-size: 20px;
 		color: #737370;
+		box-sizing: border-box;
+		-moz-box-sizing: border-box;
 	}
 	
 	.title, .screen {
