--- a/2_map_and_list/styles.css
+++ b/2_map_and_list/styles.css
@@ -1,11 +1,228 @@
-body{background:#ddddd5}
-#app{width:500px;font-family:"Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;margin:0 auto;box-shadow:3px 3px 20px rgba(0,0,0,0.2)}#app input{display:block;border:2px solid #737370;padding:5px 10px;width:100%;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;font-size:20px;color:#737370}
-#app .title,#app .screen{border:3px solid #4b4932;padding:20px;background:#b7ad70;background:-moz-linear-gradient(left, #b7ad70 0, #c9c190 50%, #b7ad70 100%);background:-webkit-gradient(linear, left top, right top, color-stop(0, #b7ad70), color-stop(50%, #c9c190), color-stop(100%, #b7ad70));background:-webkit-linear-gradient(left, #b7ad70 0, #c9c190 50%, #b7ad70 100%);background:-o-linear-gradient(left, #b7ad70 0, #c9c190 50%, #b7ad70 100%);background:-ms-linear-gradient(left, #b7ad70 0, #c9c190 50%, #b7ad70 100%);background:linear-gradient(to right, #b7ad70 0, #c9c190 50%, #b7ad70 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b7ad70', endColorstr='#b7ad70', GradientType=1);}
-#app .title{border-bottom:none;padding:1px 20px}#app .title h1{color:#4b4932;text-shadow:0 2px #fff;border:3px solid #4b4932;padding:10px 20px;text-align:center;background:#fff;background:-moz-linear-gradient(top, #fff 0, #e5e5e5 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(100%, #e5e5e5));background:-webkit-linear-gradient(top, #fff 0, #e5e5e5 100%);background:-o-linear-gradient(top, #fff 0, #e5e5e5 100%);background:-ms-linear-gradient(top, #fff 0, #e5e5e5 100%);background:linear-gradient(to bottom, #fff 0, #e5e5e5 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e5e5e5', GradientType=0);}
-#app .screen-glass{color:#484847;position:relative;border:3px solid #81baeb;padding:20px;-webkit-border-radius:20px;-moz-border-radius:20px;border-radius:20px;box-shadow:inset -5px -5px 20px rgba(255,255,255,0.8);background:#deefff;background:-moz-linear-gradient(top, #deefff 0, #98bede 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #deefff), color-stop(100%, #98bede));background:-webkit-linear-gradient(top, #deefff 0, #98bede 100%);background:-o-linear-gradient(top, #deefff 0, #98bede 100%);background:-ms-linear-gradient(top, #deefff 0, #98bede 100%);background:linear-gradient(to bottom, #deefff 0, #98bede 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#deefff', endColorstr='#98bede', GradientType=0);}#app .screen-glass h2{margin:0}
-#app .screen-glass .warn{display:block;text-align:center;width:100%}#app .screen-glass .warn p{text-align:center;padding:10px;border:3px solid #000;background:#fff;display:block;color:#000;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px}#app .screen-glass .warn p img{display:block;margin:0 auto}
-#app a,#app button,#app li{cursor:pointer;color:#fff;font-weight:bold;padding:5px 10px;text-shadow:0 1px #26568d;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:3px solid #fff;font-size:20px;text-decoration:none;background:#7db9e8;background:-moz-linear-gradient(top, #7db9e8 0, #2b88d9 50%, #3b679e 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #7db9e8), color-stop(50%, #2b88d9), color-stop(100%, #3b679e));background:-webkit-linear-gradient(top, #7db9e8 0, #2b88d9 50%, #3b679e 100%);background:-o-linear-gradient(top, #7db9e8 0, #2b88d9 50%, #3b679e 100%);background:-ms-linear-gradient(top, #7db9e8 0, #2b88d9 50%, #3b679e 100%);background:linear-gradient(to bottom, #7db9e8 0, #2b88d9 50%, #3b679e 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db9e8', endColorstr='#3b679e', GradientType=0);text-transform:capitalize}#app a:hover,#app button:hover,#app li:hover{background:#26568d}
-#app a,#app nav li:last-child{background:#eee;background:-moz-linear-gradient(top, #eee 0, #eee 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #eee), color-stop(100%, #eee));background:-webkit-linear-gradient(top, #eee 0, #eee 100%);background:-o-linear-gradient(top, #eee 0, #eee 100%);background:-ms-linear-gradient(top, #eee 0, #eee 100%);background:linear-gradient(to bottom, #eee 0, #eee 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#eeeeee', GradientType=0);border-color:#666;color:#666;text-shadow:0 2px #fff}#app a:hover,#app nav li:last-child:hover{background:#fff}
-#app button{background:#299a0b;background:-moz-linear-gradient(top, #299a0b 0, #6a995d 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #299a0b), color-stop(100%, #6a995d));background:-webkit-linear-gradient(top, #299a0b 0, #6a995d 100%);background:-o-linear-gradient(top, #299a0b 0, #6a995d 100%);background:-ms-linear-gradient(top, #299a0b 0, #6a995d 100%);background:linear-gradient(to bottom, #299a0b 0, #6a995d 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#299a0b', endColorstr='#6a995d', GradientType=0);}#app button:hover{background:#299a0b}
-#app button:disabled{border-color:#ccc;color:#ccc;background:#efefef;text-shadow:none}
-#app ul{list-style:none;list-style-type:none;margin:0;padding:0}#app ul li{display:block;cursor:pointer;color:#fff;font-weight:bold;padding:5px 10px;text-shadow:0 1px #26568d;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:3px solid #fff;margin-bottom:5px}
+body {
+  background: #ddddd5;
+}
+#app {
+  width: 500px;
+  font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  margin: 0 auto;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
+}
+#app input {
+  display: block;
+  border: 2px solid #737370;
+  padding: 5px 10px;
+  width: 100%;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  font-size: 20px;
+  color: #737370;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+#app .title,
+#app .screen {
+  border: 3px solid #4b4932;
+  padding: 20px;
+  background: #b7ad70;
+  /* Old browsers */
+  background: -moz-linear-gradient(left, #b7ad70 0%, #c9c190 50%, #b7ad70 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #b7ad70), color-stop(50%, #c9c190), color-stop(100%, #b7ad70));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left, #b7ad70 0%, #c9c190 50%, #b7ad70 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left, #b7ad70 0%, #c9c190 50%, #b7ad70 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(left, #b7ad70 0%, #c9c190 50%, #b7ad70 100%);
+  /* IE10+ */
+  background: linear-gradient(to right, #b7ad70 0%, #c9c190 50%, #b7ad70 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b7ad70', endColorstr='#b7ad70', GradientType=1);
+  /* IE6-9 */
+}
+#app .title {
+  border-bottom: none;
+  padding: 1px 20px;
+}
+#app .title h1 {
+  color: #4b4932;
+  text-shadow: 0 2px #ffffff;
+  border: 3px solid #4b4932;
+  padding: 10px 20px;
+  text-align: center;
+  background: #ffffff;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #e5e5e5));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e5e5e5', GradientType=0);
+  /* IE6-9 */
+}
+#app .screen-glass {
+  color: #484847;
+  position: relative;
+  border: 3px solid #81baeb;
+  padding: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  box-shadow: inset -5px -5px 20px rgba(255, 255, 255, 0.8);
+  background: #deefff;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #deefff 0%, #98bede 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #deefff), color-stop(100%, #98bede));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #deefff 0%, #98bede 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #deefff 0%, #98bede 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #deefff 0%, #98bede 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #deefff 0%, #98bede 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#deefff', endColorstr='#98bede', GradientType=0);
+  /* IE6-9 */
+}
+#app .screen-glass h2 {
+  margin: 0;
+}
+#app .screen-glass .warn {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+#app .screen-glass .warn p {
+  text-align: center;
+  padding: 10px;
+  border: 3px solid #000;
+  background: #fff;
+  display: block;
+  color: #000;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#app .screen-glass .warn p img {
+  display: block;
+  margin: 0 auto;
+}
+#app a,
+#app button,
+#app li {
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  padding: 5px 10px;
+  text-shadow: 0 1px #26568d;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  font-size: 20px;
+  text-decoration: none;
+  background: #7db9e8;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #7db9e8 0%, #2b88d9 50%, #3b679e 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7db9e8), color-stop(50%, #2b88d9), color-stop(100%, #3b679e));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #7db9e8 0%, #2b88d9 50%, #3b679e 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #7db9e8 0%, #2b88d9 50%, #3b679e 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #7db9e8 0%, #2b88d9 50%, #3b679e 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #7db9e8 0%, #2b88d9 50%, #3b679e 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db9e8', endColorstr='#3b679e', GradientType=0);
+  /* IE6-9 */
+  text-transform: capitalize;
+}
+#app a:hover,
+#app button:hover,
+#app li:hover {
+  background: #26568d;
+}
+#app a,
+#app nav li:last-child {
+  background: #eeeeee;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #eeeeee 0%, #eeeeee 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #eeeeee));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #eeeeee 0%, #eeeeee 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #eeeeee 0%, #eeeeee 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #eeeeee 0%, #eeeeee 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #eeeeee 0%, #eeeeee 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#eeeeee', GradientType=0);
+  /* IE6-9 */
+  border-color: #666;
+  color: #666;
+  text-shadow: 0 2px #ffffff;
+}
+#app a:hover,
+#app nav li:last-child:hover {
+  background: #fff;
+}
+#app button {
+  background: #299a0b;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #299a0b 0%, #6a995d 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #299a0b), color-stop(100%, #6a995d));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #299a0b 0%, #6a995d 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #299a0b 0%, #6a995d 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #299a0b 0%, #6a995d 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #299a0b 0%, #6a995d 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#299a0b', endColorstr='#6a995d', GradientType=0);
+  /* IE6-9 */
+}
+#app button:hover {
+  background: #299a0b;
+}
+#app button:disabled {
+  border-color: #ccc;
+  color: #ccc;
+  background: #efefef;
+  text-shadow: none;
+}
+#app ul {
+  list-style: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#app ul li {
+  display: block;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  padding: 5px 10px;
+  text-shadow: 0 1px #26568d;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  margin-bottom: 5px;
+}
