Change link to the canjs blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class='cf' id='buttons'>
 			<a href='https://forum.javascriptmvc.com/canjs'>Forums</a>
-			<a href='http://bitovi.com/blog/tag/canjs/'>Blog</a>
+			<a href='http://bitovi.com/blog/#!tag/canjs'>Blog</a>
 			<a href='https://twitter.com/canjs'>Twitter</a>
 			<a href='http://webchat.freenode.net?channels=canjs'>IRC</a>
 		</div>
