--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,5 +49,6 @@
 <script type="text/javascript" src="http://bithub.com/socket.io/socket.io.js"></script>
 <script src="http://bithub.com/widget/feeder-widget.js" type="text/javascript"></script>
 <script src="javascripts/application.js" type="text/javascript"></script>
+<script src="http://static.jsbin.com/js/embed.js"></script>
 </body>
 </html>
